--- a/update - Portuguese (PORT).html
+++ b/update - Portuguese (PORT).html
@@ -2,32 +2,32 @@
 <html lang="pt-BR" class="no-js">
 <head>
 <title>ProQuest Preference Center</title>
+<link rel="icon" type="image/x-icon" href="https://www.proquest.com/favicon.ico" />
 <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat" />
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Slabo+27px" />
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Indie+Flower" />
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Dancing+Script:400,700" />
-<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
-<link rel="stylesheet" type="text/css" href="http://www.proquest.com/includes/IMC-animate.css" />
-<link rel="stylesheet" type="text/css" href="http://www.proquest.com/includes/IMC-normalize.css" />
-<link rel="stylesheet" type="text/css" href="http://www.proquest.com/includes/IMC-bootstrap.css" />
-<link rel="stylesheet" type="text/css" href="http://www.proquest.com/includes/IMC-style.css" />
-<link rel="stylesheet" type="text/css" href="http://www.proquest.com/includes/IMC-responsive.css" />
-<link rel="stylesheet" type="text/css" href="http://www.proquest.com/includes/bootstrap-override-20140226.css" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Slabo+27px" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Indie+Flower" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" />
+<link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-animate.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-normalize.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-bootstrap.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-style.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-responsive.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/bootstrap-override-20140226.css" />
 
-<script src="http://www.proquest.com/includes/IMC-modernizr-2.6.2.min.js"></script>
-<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-<script src="http://www.proquest.com/includes/IMC-jquery-1.10.2.min.js"></script>
-<script src="http://www.proquest.com/includes/bootstrap.min.js"></script>
-<script src="http://www.proquest.com/includes/parsley.min.js"></script>
-<script src="http://www.proquest.com/includes/jquery.cookie.js"></script>
-<script src="http://www.proquest.com/includes/jquery.form.min.js"></script>
-<script src="http://www.proquest.com/includes/pq-clear-preference-center.js"></script>
+<script src="https://www.proquest.com/includes/IMC-modernizr-2.6.2.min.js"></script>
+<!--[if IE]><script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+<script src="https://www.proquest.com/includes/IMC-jquery-1.10.2.min.js"></script>
+<script src="https://www.proquest.com/includes/bootstrap.min.js"></script>
+<script src="https://www.proquest.com/includes/parsley.min.js"></script>
+<script src="https://www.proquest.com/includes/jquery.form.min.js"></script>
+<script src="https://www.proquest.com/includes/pq-clear-preference-center.js"></script>
 <script>
 // Enable Bootstrap tooltips
 $(function () {
@@ -63,8 +63,8 @@ hr {
 #email-warning {
   display: none;
 }
-.well-sm-adjacent {
-  padding-top: 9px;
+a.clear-identity-action {
+  color: #00a0df;
 }
 .tooltip-inner {
   max-width: 275px;
@@ -107,9 +107,9 @@ hr {
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div id="navbar-collapse-1" class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li><a name="TopNav_SupportCenter" href="http://www.proquest.com/company/support-landing.html">Support Center |</a></li>
-                <li><a name="TopNavNews" href="http://www.proquest.com/about/news/">News |</a></li>
-                <li><a name="TopNav_Contact" href="http://www.proquest.com/contact/contact-landing.html">Contact</a></li>
+                <li><a name="TopNav_SupportCenter" href="https://www.proquest.com/company/support-landing.html">Support Center |</a></li>
+                <li><a name="TopNavNews" href="https://www.proquest.com/about/news/">News |</a></li>
+                <li><a name="TopNav_Contact" href="https://www.proquest.com/LATAM-PT/pt-contact/">Contact</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
@@ -123,7 +123,9 @@ hr {
   <div class="container">
     <div class="col-md-12">
       <div class="inner_proquest">
-        <a href="https://www.proquest.com" target="_blank" name="httpswwwproquestcom"><img src="pq-header-logo.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo.jpg" xt="SPIMAGE" /></a>
+        <a href="https://www.proquest.com/LATAM-PT/" target="_blank" name="httpswwwproquestcom">
+          <img src="pq-header-logo.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo.jpg" xt="SPIMAGE" contentId="21963227" />
+        </a>
       </div>
     </div>
   </div>
@@ -134,7 +136,7 @@ hr {
     <div class="col-md-12">
       <div class="inner_db">
         <div class="top_db">
-          <p><a href="https://www.proquest.com" style="color: #00a0df; text-decoration: none;" name="httpswwwproquestcom">ProQuest</a> > Your Email Preferences</p>
+          <p><a href="https://www.proquest.com/LATAM-PT/" style="color: #00a0df; text-decoration: none;" name="httpswwwproquestcom">ProQuest</a> > Your Email Preferences</p>
         </div>
         <div class="bottom_t"><span style="font-size: 36px; padding-bottom: 10px;">Your Email Preferences</span></div>
       </div>
@@ -161,16 +163,11 @@ hr {
       </p>
     </div>
     <div id="email-warning" class="col-md-6">
-      <div class="well-sm-adjacent">
-        <p class="pq-lead-text"><strong>Por motivos de segurança e para proteger os dados de nossos clientes, desativamos a opção de editar seu endereço de e-mail neste formulário.</strong></p>
-        <p>Para atualizar o seu e-mail, por favor, registre-se novamente enviando um <a href="#" class="clear-identity-action" name="new_form" xt="SPNOTRACK">novo formulário</a>.</p>
-      </div>
+      <p class="pq-lead-text"><strong>Por motivos de segurança e para proteger os dados de nossos clientes, desativamos a opção de editar seu endereço de e-mail neste formulário.</strong></p>
+      <p>Para atualizar o seu e-mail, por favor, registre-se novamente enviando um <a href="#" class="clear-identity-action" name="new_form" xt="SPNOTRACK">novo formulário</a>.</p>
     </div>
     <div class="col-md-6">
-      <div class="well well-sm">
-        <p>Para cancelar a inscrição de todas as correspondências da ProQuest <a href="http://go.proquest.com/preferences/unsubscribe.html" target="_blank" name="Unsubscribe Redirect" style="color: #00a0df; text-decoration: none;">selecione aqui</a>.</p>
-        <p>Para gerenciar suas preferências de comunicação de rua Alexander, por favor <a href="https://alexanderstreet.com/preferences" target="_blank" name="AS Unsubscribe" style="color: #00a0df; text-decoration: none;">selecione aqui</a>.</p>
-      </div>
+      <div class="well well-sm">Para cancelar a inscrição de todas as correspondências da ProQuest <a href="https://go.proquest.com/preferences-pt/unsubscribe.html" target="_blank" name="Unsubscribe Redirect" style="color: #00a0df; text-decoration: none;">selecione aqui</a>.</div>
     </div>
   </div>
 </div>
@@ -188,7 +185,7 @@ hr {
         <!-- Autocomplete set to "off" for compatibility workaround for Firefox. -->
 
         <!-- ====== START Hidden Fields for Checkboxes ====== -->
-          <!-- Needed because WCA, a.k.a. IMC doesn't know how to do multi-select checkboxes. -->
+          <!-- Needed because Silverpop/IMC/WCA doesn't know how to do multi-select checkboxes. -->
           <div id="shadow-fields">
             <input type="hidden" class="shadow-field" name="email_type_pc" />
             <input type="hidden" class="shadow-field" name="email_newsleter_type" />
@@ -763,40 +760,40 @@ hr {
         <div class="col-md-2 col-xs-6">
           <div class="single_ft">
             <h4>Navegação</h4><!--Navigation-->
-            <a name="Footer_Navigation_Libraries" href="http://www.proquest.com/libraries">Para Bibliotecas</a><br>
-            <a name="Footer_Navigation_Researchers" href="http://www.proquest.com/researchers">Para Pesquisadores</a><br>
-            <a name="Footer_Navigation_ProductsServices" href="http://www.proquest.com/products-services">Produtos &amp; Serviços</a><br>
-            <a name="Footer_Navigation_Customers" href="http://www.proquest.com/customer-care">Para Clientes</a><br>
-            <a name="Footer_Navigation_Events" href="http://www.proquest.com/events">Eventos</a><br>
-            <a name="Footer_Navigation_About" href="http://www.proquest.com/about">Sobre</a><br>
-            <a name="Footer_Navigation_Blogs" href="http://www.proquest.com/blog">Blogs</a>
+            <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries" xthyperlink="915119" xt="SPCLICK" xtlinkname="Footer_Navigation_Libraries">Para Bibliotecas</a><br>
+            <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers" xthyperlink="915120" xt="SPCLICK" xtlinkname="Footer_Navigation_Researchers">Para Pesquisadores</a><br>
+            <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services" xthyperlink="915121" xt="SPCLICK" xtlinkname="Footer_Navigation_ProductsServices">Produtos &amp; Serviços</a><br>
+            <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care" xthyperlink="915122" xt="SPCLICK" xtlinkname="Footer_Navigation_Customers">Para Clientes</a><br>
+            <a name="Footer_Navigation_Events" href="https://www.proquest.com/events" xthyperlink="915123" xt="SPCLICK" xtlinkname="Footer_Navigation_Events">Eventos</a><br>
+            <a name="Footer_Navigation_About" href="https://www.proquest.com/about" xthyperlink="915124" xt="SPCLICK" xtlinkname="Footer_Navigation_About">Sobre</a><br>
+            <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog" xthyperlink="915125" xt="SPCLICK" xtlinkname="Footer_Navigation_Blogs">Blogs</a>
           </div>
         </div>
         <div class="col-md-2 col-xs-6">
           <div class="single_ft">
             <h4>Suporte</h4><!--Support-->
-            <a name="Footer_Support_SupportCenter" href="http://www.proquest.com/company/support-landing.html">Centro de Suporte</a><br>
-            <a name="Footer_Support_ToolsResources" href="http://www.proquest.com/customer-care/tools-resources/">Ferramentas e Recursos</a><br>
-            <a name="Footer_Support_TrainingWebinars" href="http://www.proquest.com/customer-care/training-webinars/">Webinars de Treinamento</a><br>
-            <a name="Footer_Support_LibGuides" href="http://proquest.libguides.com/home">LibGuides</a>
+            <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html" xthyperlink="915126" xt="SPCLICK" xtlinkname="Footer_Support_SupportCenter">Centro de Suporte</a><br>
+            <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/" xthyperlink="915127" xt="SPCLICK" xtlinkname="Footer_Support_ToolsResources">Ferramentas e Recursos</a><br>
+            <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/" xthyperlink="915128" xt="SPCLICK" xtlinkname="Footer_Support_TrainingWebinars">Webinars de Treinamento</a><br>
+            <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home" xthyperlink="915129" xt="SPCLICK" xtlinkname="Footer_Support_LibGuides">LibGuides</a>
           </div>
         </div>
       </div>
     </div>
   </div><!-- /.footer_one -->
 
+  <!-- For the "Cookie Preferences" footer link - served by trustarc.com -->
+  <script src="https://consent.trustarc.com/notice?domain=proquest.com&c=teconsent&js=nj&noticeType=bb&text=true" async="async" crossorigin=""></script>
+
   <div class="main_footer">
-    <div class="container">
-      <div class="col-md-12">
-        <div class="inner_footer">
-          <p style="text-align: center;">
-            <a name="BottomNav_Privacy" href="http://www.proquest.com/about/privacy-statement.html">Privacy</a>&nbsp;&nbsp;
-            <a name="BottomNav_TermsofUse" href="http://www.proquest.com/about/terms-and-conditions.html">Terms of Use</a>&nbsp;&nbsp;
-            <a name="BottomNav_Cookies" href="http://www.proquest.com/about/cookie-policy.html">Cookies</a>&nbsp;&nbsp;
-            <a name="BottomNav_Accessibility" href="http://www.proquest.com/company/ProQuest-ADA-Compliance.html">Accessibility</a>&nbsp;&nbsp;
-            <a name="BottomNav_DMCAPolicy" href="http://media2.proquest.com/documents/dmcapolicy.pdf">DMCA Policy</a>
-          </p>
-        </div>
+    <div class="container links col-xs-12">
+      <div style="text-align: center;">
+        <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html" xthyperlink="915130" xt="SPCLICK" xtlinkname="BottomNav_Privacy">Privacy</a>
+        <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html" xthyperlink="915131" xt="SPCLICK" xtlinkname="BottomNav_TermsofUse">Terms of Use</a>
+        <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html" xthyperlink="915132" xt="SPCLICK" xtlinkname="BottomNav_Cookies">Cookies</a>
+        <div id="teconsent" style="display: inline;"></div>
+        <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html" xthyperlink="915133" xt="SPCLICK" xtlinkname="BottomNav_Accessibility">Accessibility</a>
+        <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf" xthyperlink="915134" xt="SPCLICK" xtlinkname="BottomNav_DMCAPolicy">DMCA Policy</a>
       </div>
     </div>
   </div><!-- /.main_footer -->
