--- a/unsubscribe - English (EN).html
+++ b/unsubscribe - English (EN).html
@@ -73,6 +73,9 @@
   <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
 
+
+<!-- ============ START Header ============ -->
+
 <div class="header-area">
   <div class="container">
     <div class="row">
@@ -120,7 +123,7 @@
     <div class="col-md-12">
       <div class="inner_db">
         <div class="top_db">
-          <p><a href="https://www.proquest.com" style="color: #00a0df; text-decoration: none;" name="httpswwwproquestcom">ProQuest</a> > Your Subscription Preferences</p>
+          <p><a href="https://www.proquest.com" style="color: #00a0df; text-decoration: none;" name="httpswwwproquestcom">ProQuest</a> > Your Email Preferences</p>
         </div>
         <div class="bottom_t"><span style="font-size: 36px; padding-bottom: 10px;">Unsubscribe</span></div>
       </div>
@@ -136,101 +139,118 @@
   </div>
 </div><!-- /.background_part -->
 
+<!-- ============ END Header ============ -->
+
+
 <!-- ============ START Intro Text ============ -->
 <div class="small_para_part">
   <div class="container">
     <div class="col-md-12">
-      <div class="inner_small">
-        <p class="pq-lead-text">We're sorry to see you go but we understand that you've got plenty of email in your inbox every day, and sometimes you just need to simplify.</p>
-        <h2>Have you checked your preferences lately?</h2>
-        <p>We strive to provide our subscribers with quality content that is relevant to them by using individual subscription preferences. If you simply want to receive fewer or different communications, we suggest that you <a href="http://go.proquest.com/preferences" name="update_preferences" target="_blank" xt="SPCLICK" xtlinkname="update_preferences" xthyperlink="849391" style="color: #00a0df; text-decoration:none">update your subscription preferences</a> instead of unsubscribing.</p>
-      </div>
+      <p class="pq-lead-text">We're sorry to see you go but we understand that you've got plenty of email in your inbox every day, and sometimes you just need to simplify.</p>
     </div>
   </div>
 </div>
 <!-- ============ END Intro Text ============ -->
 
+
 <!-- ============ START Main Form Body ============ -->
 <div class="main_form_part">
   <div class="container">
     <div class="col-md-12">
-      <div class="inner_first_one">
+      <div class="panel">
+        <h2>Have you checked your preferences lately?</h2>
+        <p>We strive to provide our subscribers with quality content that is relevant to them by using individual subscription preferences.
+        If you simply want to receive fewer or different communications, we suggest that you <a href="http://go.proquest.com/preferences" name="update_preferences" target="_blank" style="color: #00a0df; text-decoration:none" xt="SPCLICK" xtlinkname="update_preferences" xthyperlink="849391">update your subscription preferences</a> instead of unsubscribing.</p>
 
-        <form id="unsubscribe" method="post">
-          <ul class="clearfix">
-            <li class="clearfix">
-              <label class="pq-form-label-dark">Email <span class="required">*</span></label>
-              <input type="text" class="form-control" id="email" name="email" data-required="true" data-type="email" />
-            </li>
-            <br>
-            <li class="clearfix">
-              <input type="submit" value="Unsubscribe" class="btn btn-primary btn-lg" id="submit" name="submit" />
-            </li>
-            <br>
+      <!-- ======== START FORM ======== -->
+        <form id="unsubscribe" method="post" style="margin-top: 20px;">
+
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label class="pq-form-label-dark">Email <span class="required">*</span></label>
+                <input type="text" class="form-control" id="email" name="email" data-required="true" data-type="email" />
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="form-group">
+                <input type="submit" value="Unsubscribe" class="btn btn-primary btn-lg" id="submit" name="submit" />
+              </div>
+            </div>
+          </div>
+
 <!--
-            <p>Instead of leaving for good you could just taking a break, click Pause to stop recieving mailing from us for 60 days.</p>
-            <br>
-            <li class="clearfix">
-              <input type="submit" value="Pause" class="btn btn-primary btn-lg" name="SP_SNOOZE_SUBMIT" />
-            </li>
+          <h2>Instead of leaving for good you could just take a break.</h2>
+          <p>Click Pause to stop recieving mailing from us for 60 days.</p>
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="form-group">
+                <input type="submit" value="Pause" class="btn btn-primary btn-lg" name="SP_SNOOZE_SUBMIT" />
+              </div>
+            </div>
+          </div>
 -->
-          </ul>
+
         </form>
+      <!-- ======== END FORM ======== -->
 
       </div>
     </div>
   </div>
-
-<!-- ======== START Temporary Footer (to be removed) ======== -->
-
-  <div class="footer_one">
-    <div class="container">
-      <div class="col-md-12">
-        <div class="col-md-2 col-xs-6">
-          <div class="single_ft quicklinks">
-            <h4>Navigation</h4><!--Navigation-->
-            <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries">For Libraries</a><br>
-            <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers">For Researchers</a><br>
-            <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services">Products &amp; Services</a><br>
-            <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care">For Customers</a><br>
-            <a name="Footer_Navigation_Events" href="https://www.proquest.com/events">Events</a><br>
-            <a name="Footer_Navigation_About" href="https://www.proquest.com/about">About</a><br>
-            <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog">Blogs</a>
-          </div>
-        </div>
-        <div class="col-md-2 col-xs-6">
-          <div class="single_ft quicklinks">
-            <h4>Support</h4><!--Support-->
-            <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html">Support Center</a><br>
-            <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/">Tools and Resources</a><br>
-            <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/">Training Webinars</a><br>
-            <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home">LibGuides</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div><!-- /.footer_one -->
-
-  <!-- For the "Cookie Preferences" footer link - served by trustarc.com -->
-  <script src="https://consent.trustarc.com/notice?domain=proquest.com&c=teconsent&js=nj&noticeType=bb&text=true" async="async" crossorigin=""></script>
-
-  <div class="main_footer">
-    <div class="container links col-xs-12">
-      <div style="text-align: center;">
-        <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html">Privacy</a>
-        <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html">Terms of Use</a>
-        <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html">Cookies</a>
-        <div id="teconsent" style="display: inline;"></div>
-        <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html">Accessibility</a>
-        <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf">DMCA Policy</a>
-      </div>
-    </div>
-  </div><!-- /.main_footer -->
-
-<!-- ======== END Temporary Footer ======== -->
-
 </div>
 <!-- ============ END Main Form Body ============ -->
+
+
+<!-- ============ START Footer ============ -->
+
+<div class="footer_one">
+  <div class="container">
+    <div class="col-md-12">
+      <div class="col-md-2 col-xs-6">
+        <div class="single_ft quicklinks">
+          <h4>Navigation</h4><!--Navigation-->
+          <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries">For Libraries</a><br>
+          <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers">For Researchers</a><br>
+          <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services">Products &amp; Services</a><br>
+          <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care">For Customers</a><br>
+          <a name="Footer_Navigation_Events" href="https://www.proquest.com/events">Events</a><br>
+          <a name="Footer_Navigation_About" href="https://www.proquest.com/about">About</a><br>
+          <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog">Blogs</a>
+        </div>
+      </div>
+      <div class="col-md-2 col-xs-6">
+        <div class="single_ft quicklinks">
+          <h4>Support</h4><!--Support-->
+          <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html">Support Center</a><br>
+          <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/">Tools and Resources</a><br>
+          <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/">Training Webinars</a><br>
+          <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home">LibGuides</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div><!-- /.footer_one -->
+
+<!-- For the "Cookie Preferences" footer link - served by trustarc.com -->
+<script src="https://consent.trustarc.com/notice?domain=proquest.com&c=teconsent&js=nj&noticeType=bb&text=true" async="async" crossorigin=""></script>
+
+<div class="main_footer">
+  <div class="container links col-xs-12">
+    <div style="text-align: center;">
+      <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html">Privacy</a>
+      <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html">Terms of Use</a>
+      <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html">Cookies</a>
+      <div id="teconsent" style="display: inline;"></div>
+      <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html">Accessibility</a>
+      <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf">DMCA Policy</a>
+    </div>
+  </div>
+</div><!-- /.main_footer -->
+
+<!-- ============ END Footer ============ -->
 
 </body>
 </html>
